# ukraine_oda_tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt  table.csv  update.py  updates.csv
output/: dt_table.csv  hcr_data.csv  idrc_constant.csv  idrc_oda_chart_0.csv  idrc_oda_chart_1.csv  idrc_oda_chart_2.csv  idrc_oda_chart_3.csv  idrc_oda_chart_4.csv  idrc_oda_chart_5.csv  idrc_over_time_constant.csv  idrc_share.csv  latest_oda.csv  sdr.csv  table.csv  ukraine_refugee_cost_estimates.csv  ukraine_refugee_cost_estimates.xlsx  unhcr_data_high.feather  updates.csv
raw_data/: canada_data.csv  dac1.feather  dac_2024-12-02.parquet  dac_idrc_constant.csv  data_updates.json  dt_articles.json  early_august_hcr_data.csv  early_december_hcr_data.csv  early_january_hcr_data.csv  early_november_hcr_data.csv  early_october_hcr_data.csv  early_september_hcr_data.csv  gni.csv  gni.xlsx  idrc.csv  idrc_as_share.csv  july_hcr_data.csv  late_december_hcr_data.csv  late_july_hcr_data.csv  late_november_hcr_data.csv  late_october_hcr_data.csv  late_september_hcr_data.csv  mid_august_hcr_data.csv  mid_december_hcr_data.csv  mid_january_hcr_data.csv  mid_november_hcr_data.csv  mid_october_hcr_data.csv  mid_september_hcr_data.csv  non-eu-refugees.csv  oda_current.csv  pydeflate_dac1.feather  table1_raw_2022_2022.feather  table1_raw_2022_2022.parquet  total_idrc_current.csv  total_idrc_current.xlsx  total_oda_current.csv
scripts/: __init__.py  config.py  create_table.py  dt_table.py  idrc.py  idrc_per_capita.py  oda.py  oda_data.py  refugees.csv  unhcr_data.py
(+6 files in other folders)
