[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Jorge Rivera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
bblocks = "^1.2.1"
country-converter = "^1.2"
requests = "^2.31.0"
pydeflate = "^1.3.10"
selenium = "^4.16.0"
numpy = "^1.26.3"
oda-data = "^1.0.11"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
